--- a/recall/src/app/alumni/alumniprofiles/alumniprofiles.component.html
+++ b/recall/src/app/alumni/alumniprofiles/alumniprofiles.component.html
@@ -7,10 +7,10 @@
   <div *ngFor="let profile of profiles" class="card profile">
        <h1 class="text-center name">{{profile.name}}</h1>
        <div class="profileimage">
-         <img src={{profile.profile}} alt="" height="100%" width="100%" style="border-radius: 10px;">
+         <img src={{profile.image}} alt="" height="100%" width="100%">
        </div>
        <h6 class="text-center posting">{{profile.designation}} @ {{profile.company}}</h6>
-       <p class="about">{{profile.aboutprofile}}</p>
+       <p class="about">{{profile.description}}</p>
   </div>
 </div>
 </div>
