--- a/recall/src/app/admin/settings/settings.component.html
+++ b/recall/src/app/admin/settings/settings.component.html
@@ -1,6 +1,9 @@
 <div class="main">
 <div class="content" *ngIf='gotdata'>
 <div class="updatediv">
+    <div class="notifdiv animate slide-in-down" #notificationDiv>
+       Updated SucessFullyDont worry
+    </div>
     <div class="head">
         <p>Personal Details</p>
     </div>
@@ -134,12 +137,13 @@
                 <span *ngIf='!showaddInstitute' class="add addspan" (click)='showaddInstitute=true'><i class="fa fa-plus" aria-hidden="true"></i>Add</span>
                 <div *ngIf='showaddInstitute' class="add newinst">
                     <input type="text" placeholder="Enter Institute Name" #iname>
-                    <i class="fa fa-check" aria-hidden="true" (click)='addinst(iname.value)'></i>
+                    <i class="fa fa-check" aria-hidden="true" (click)='addinst(iname.value)' [ngClass] ="FadeOutSuccessMsg()"></i>
                     <i class="fa fa-times" aria-hidden="true" (click)='showaddInstitute=false'></i>
                 </div>
             </div>
-            <div class="inlist" *ngFor='let i of allInstitutes| keyvalue;let index as in'>
-                <p class="eachin" [ngClass]='{"activeInst":index===selectedInstitute}' (click)='onInstSelect(i.key)'>{{i.key}} <span class="close" aria-hidden="true">&times;</span></p>
+            <p *ngIf='(inst.length<1)' class="noinstselect">No Institutes Added</p>
+            <div class="inlist" *ngFor='let i of inst;let index as in'>
+                <p class="eachin" [ngClass]='{"activeInst":i.name===selectedInstitute["name"]}' (click)='onInstSelect(i)'>{{i.name}} <span class="close" (click)='deleteInst(i)'aria-hidden="true">&times;</span></p>
                             
             </div>
         </div>
@@ -147,15 +151,17 @@
             <div class="institute">Branches
                 <span *ngIf='!showaddBranch&&instSelect' class="add addspan" (click)=' showaddBranch=true'><i class="fa fa-plus" aria-hidden="true"></i>Add</span>
                 <div *ngIf=' showaddBranch' class="add newinst">
-                    <input type="text" placeholder="Branh Name">
-                    <i class="fa fa-check" aria-hidden="true"></i>
+                    <input type="text" placeholder="Branh Name" #branch>
+                    <i class="fa fa-check" aria-hidden="true"(click)='addBranch(branch.value)'></i>
                     <i class="fa fa-times" aria-hidden="true" (click)=' showaddBranch=false'></i>
                 </div>
                 </div>
                 <div class="blist">
                     <p *ngIf='!instSelect' class="noinstselect">Select Institute to Preview/Edit/Delete Branches</p>
+                    <p *ngIf='instSelect&&(branches.length==0)' class="noinstselect">No Branches</p>
+                    
                     <div class="inlist" *ngFor='let i of branches'>
-                        <p class="eachin" >{{i}} <span class="close" aria-hidden="true">&times;</span></p>
+                        <p class="eachin" >{{i}} <span (click)='deleteBranch(i)' class="close" aria-hidden="true">&times;</span></p>
                                     
                     </div>
                 </div>
