--- a/recall/src/app/alumni/viewallhalloffame/viewallhalloffame.component.css
+++ b/recall/src/app/alumni/viewallhalloffame/viewallhalloffame.component.css
@@ -27,17 +27,22 @@
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     padding: 10px;
     margin: 10px;
+    width: 97%;
 }
 .eachhof{
-    height: 155px;
+    height: 135px;
     background-color: white;
     margin-top: 10px;
     border: 1px solid black;
     display: inline-block;
+    vertical-align: top;
     width: 45%;
     margin: 18px;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 
+}
+.recenthof .info{
+    width: 100%;
 }
 .eachhof .info{
     width: 100%;
@@ -45,8 +50,8 @@
 .info{
     padding-left: 15px;
     padding-right: 10px;
-    height: 100%;
 }
+
 .hofbranch
 {
     position: relative;
